Inserção de Subtipos Secundários em Ativo Não Circulante
